@@ -49,6 +49,7 @@ Application Changes:
 - Added support for the actiondicepool improvement selecting from a list of the actions provided in actions.xml.
 - Improvements and other types of bonuses that disable cyberware and/or bioware no longer prevent characters from buying Essence Holes, Essence Antiholes, unequipped modular cyberlimbs, and plugins for unequipped modular cyberlimbs.
 - When adding bonuses or improvements that disable cyberware and/or bioware, characters no longer get their Essence Holes, Antiholes, and modular cyberlimbs deleted.
+- Armor costs now properly support "FixedValues()" entries.
 
 Data Changes:
 - Fixed missing multiplier for Haunted lifestyle quality.
